     specify the current_player attribute in the [side] wml.  
   * unit filters, specially in wesnoth.get_units now have a limit= attribute
     to limit the number or matched units.
   * Added new attribute "registered_users_only" to MultiplayerServerWML which indicates
     that only registered users should be allowed to join the game
   * wesnoth now does a stricter check for unit type ids.
 * Lua API:
   * wesnoth.match_unit can now take a location (rather than a unit) as
     the optional third parameter. This will cause the filter to consider
     the unit to be on that location instead of its actual location.
     This even works for units on a recall list.
   * wesnoth.highlight_hex is no longer deprecated, but its effect is
     slightly different from the old one. It outlines a hex, nothing more.
   * wesnoth.select_hex is now deprecated in favour of the new
     wesnoth.select_unit (or u:select). The effect is almost the same
     (with the exception that it does not outline the hex if true is
     passed as the second argument), but this name change was done to
     emphasize that it acts on a unit, more than a location.
   * New wesnoth.set_time_of_day function which sets the current time
     of day, taken either as the time ID (eg "second_watch") or the index
     of the time in the overall schedule (eg, 1 would be dawn in the default
     schedule). Optional second argument takes a time area ID, to set
     local instead of global time.
   * New wesnoth.add_fog and wesnoth.remove_fog functions allow changing fog
     on the map. The [lift_fog] and [clear_fog] tags now use this.
   * New wesnoth.add_sound_source, wesnoth.remove_sound_source, and
     wesnoth.get_sound_source functions to allow manipulation of sound
     sources. The [sound_source] and [remove_sound_source] now use these.
   * New wesnoth.log function for printing log messages. The [wml_message]
     and [deprecated_message] tags now use this.