@@ -216,3 +216,20 @@
         {RETURN ({VARIABLE_CONDITIONAL pass_test equals 1})}
     [/event]
 )}
+
+{GENERIC_UNIT_TEST "event_handlers_in_events_9" (
+    [event]
+        name=start
+        {VARIABLE pass_test 0}
+        [event]
+        	name=foo
+            id=test
+            {VARIABLE pass_test 1}
+        [/event]
+
+        [fire_event]
+            id=test
+        [/fire_event]
+        {RETURN ({VARIABLE_CONDITIONAL pass_test equals 1})}
+    [/event]
+)}
