@@ -162,7 +162,7 @@ class game_lua_kernel : public lua_kernel_base
 	int impl_theme_items_set(lua_State *L);
 	int cfun_builtin_effect(lua_State *L);
 	int cfun_wml_action(lua_State *L);
-	int intf_fire_event(lua_State *L);
+	int intf_fire_event(lua_State *L, const bool by_id);
 	int intf_fire_wml_menu_item(lua_State *L);
 	int intf_teleport(lua_State *L);
 	int intf_remove_sound_source(lua_State *L);
